--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <header class="site-header container-fluid">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <div class="row"><div class="col-xs-2 col-sm-1">
     <div class="display-center">
       <div class="play-radio display-center align-items-center">
