--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
                 aria-orientation="vertical" tabindex="0" style="width: 14px; height: 14px; transform: translate(-50%, 50%); left: 50%; bottom: 100%; transition: bottom 0.5s;">
                 <div class="vue-slider-dot-handle"></div></div></div></vue-slider></div></div></div> 
     <div class="col-xs-4 col-sm-4 logo-col"><div class="logo display-center"><a href="/" class="nuxt-link-exact-active nuxt-link-active" aria-current="page">
-     <!-- <img src="/_nuxt/img/worldwide-wordmark.310812a.svg" alt="Worldwide" class="header-icon"></a></div></div> <div class="col-xs-3 col-sm-3 hide-mobile"> -->
-        <h1>Leeds Student Radio</h1>
+     <!-- <img src="/_nuxt/img/worldwide-wordmark.310812a.svg" alt="Worldwide" class="header-icon"> -->   <h1>Leeds Student Radio</h1> 
+    </a></div></div> <div class="col-xs-3 col-sm-3 hide-mobile">
+     
         <div class="search-account"><a href="/search" class="button-large filled uppercase text-center">
             Search
           </a> <a href="/users/prompt" class="button-large filled uppercase text-center">
               Join Family
             </a></div></div> <div class="col-xs-2 col-sm-1"><div class="menu-button display-center">
-              <img src="/_nuxt/img/menu-open.034d474.svg" alt="Open Menu" class="header-icon"></div>
+              <img src="Hamburger_icon.svg.png" alt="Open Menu" class="header-icon"></div>
             </div></div> <div id="radio-player"><audio src="https://worldwidefm.out.airtime.pro/worldwidefm_b"></audio></div></header>
