--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <header class="site-header container-fluid">
   <link rel="stylesheet" href="style.css">
+  <script type="text/javascript" src="1.js"></script>
+   <script type="text/javascript" src="2.js"></script>
+   <script type="text/javascript" src="3.js"></script>
+   <script type="text/javascript" src="4.js"></script>
+   <script type="text/javascript" src="5.js"></script>
   <div class="row"><div class="col-xs-2 col-sm-1">
     <div class="display-center">
       <div class="play-radio display-center align-items-center">
