--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             Search
           </a> <a href="/users/prompt" class="button-large filled uppercase text-center">
               Join Family
-            </a></div></div> <div class="col-xs-2 col-sm-1" clickable-div><div class="menu-button display-center">
+            </a></div></div> <div class="col-xs-2 col-sm-1"><div class="menu-button display-center">
               <img src="Hamburger_icon.svg.png" alt="Open Menu" class="header-icon"></div>
             </div></div> <div id="radio-player"><audio src="https://worldwidefm.out.airtime.pro/worldwidefm_b"></audio></div></header>
 
